# VicVPN

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  build-linux.sh  build-mingw.bat  build-release.bat
.github/workflows/: linux.yml  release.yml
docs/: RELEASE.ru.md  USER.ru.md
include/vicvpn/app/: I18n.h  Settings.h  Version.h.in
include/vicvpn/config/: ConfigBuilders.h  SingboxConfigBuilder.h
include/vicvpn/core/: ConnectionManager.h  CoreHealth.h  CoreManagers.h
include/vicvpn/model/: ServerProfile.h
include/vicvpn/parser/: ImportService.h  OutlineConfigParser.h  SingboxConverter.h  SsconfCountry.h  UriParser.h
include/vicvpn/storage/: Database.h
include/vicvpn/ui/: AboutDialog.h  ImportDialog.h  MainWindow.h  SettingsDialog.h
include/vicvpn/util/: AdminElevation.h  AppPaths.h  BypassRoute.h  NetworkRoute.h  PlatformAutostart.h  StringUtil.h  TunLinux.h  TunPlatform.h  TunWindows.h  WindowsAutostart.h
installer/: Install-VicVPN.ps1  Setup.cmd  SetupBootstrap.cs  VicVPN.iss  info-before-ru.txt
installer/linux/: install.sh
resources/: app.rc  resources.qrc
resources/styles/: dark.qss
src/: main.cpp
src/app/: Application.cpp  I18n.cpp  Settings.cpp
src/config/: Hy2ConfigBuilder.cpp  SingboxConfigBuilder.cpp  XrayConfigBuilder.cpp
src/core/: ConnectionManager.cpp  CoreHealth.cpp  HysteriaCoreManager.cpp  SingboxCoreManager.cpp  Tun2socksManager.cpp  XrayCoreManager.cpp
src/model/: ServerProfile.cpp
src/parser/: Hy2UriParser.cpp  ImportService.cpp  OutlineConfigParser.cpp  SingboxConverter.cpp  SsconfCountry.cpp  SsconfResolver.cpp  SubscriptionFetcher.cpp  UriParser.cpp
src/storage/: Database.cpp
src/ui/: AboutDialog.cpp  ImportDialog.cpp  MainWindow.cpp  SettingsDialog.cpp
src/util/: AdminElevation.cpp  AdminElevation_linux.cpp  AppPaths.cpp  NetworkRoute.cpp  NetworkRoute_linux.cpp  PlatformAutostart_linux.cpp  PlatformAutostart_win.cpp  StringUtil.cpp  TunLinux.cpp  TunWindows.cpp  WindowsAutostart.cpp
tools/: build-installer.ps1  build-setup-exe.ps1  ensure-wintun.ps1  fetch-all-deps.ps1  fetch-core-linux.sh  fetch-core.ps1  get-version.ps1  make-icon.ps1  package-linux.sh  package-portable.ps1  verify-tun.ps1
